# readpassphrase-sys

./: Cargo.toml  LICENSE  build.rs  wrapper.h
src/: lib.rs
