[package]
name = "readpassphrase-sys"
version = "0.0.2"
edition = "2018"
categories = ["external-ffi-bindings"]
description = "Minimal Rust bindings for OpenBSD's readpassphrase"
keywords = ["bsd", "auth", "ffi"]
license = "BSD-2-Clause"
repository = "https://github.com/orvij/readpassphrase-sys"
authors = ["orvi"]

[dependencies]
